--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.3.3",
+    "lodash": "^4.17.21",
     "next": "^13.1.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
